重新调整数据库

--- a/实战案例3/第19节/如何运行本节课程序.md
+++ b/实战案例3/第19节/如何运行本节课程序.md
@@ -5,20 +5,23 @@
 conda activate rag2
 ```
 
-2. 切换到 `程序\main` 目录下运行以下命令更新数据库
+2. 切换到根目录下的 `实战案例3\第19节\程序\main` 目录
+3. 运行以下命令更新数据库
 
 ```powershell
 python .\manage.py makemigrations
 python .\manage.py migrate
 ```
 
-3. 运行以下命令把website跑起来：
+4. 打开 `pgadmin` 确认数据库表都创建无误。
+
+5. 运行以下命令把website跑起来：
 
 ```powershell
 python .\manage.py runserver
 ```
 
-4. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
+6. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
 
 # 第二部分
 
@@ -46,7 +49,6 @@ python .\main.py
 conda activate rag2
 ```
 
-2. 切换到根目录下的 `实战案例3\嵌入模型服务` 目录
+2. 切换到根目录下的 `实战案例3\第19节\要导入的数据` 目录
 
-3. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，将会把 `data.xlsx` 的数据导入到数据库
-
+3. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
