完善测试数据

--- a/实战案例3/第19节/如何运行本节课程序.md
+++ b/实战案例3/第19节/如何运行本节课程序.md
@@ -1,4 +1,4 @@
-# 第一部分
+# 第一部分 - 更新数据库表和启动网站
 1. 打开 `anaconda` 运行以下命令激活虚拟环境 `rag2`
 
 ```powershell
@@ -23,7 +23,7 @@ python .\manage.py runserver
 
 6. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
 
-# 第二部分
+# 第二部分 启动嵌入模型服务
 
 1. 新开一个 `anaconda` 并激活虚拟环境 `rag2`
 
@@ -41,7 +41,7 @@ python .\main.py
 
 4. 打开浏览器访问 `http://127.0.0.1:8902/` 确认网站可以正常访问
 
-# 第三部分
+# 第三部分 导入数据
 
 1. 新开一个 `anaconda` 并激活虚拟环境 `rag2`
 
@@ -52,3 +52,11 @@ conda activate rag2
 2. 切换到根目录下的 `实战案例3\第19节\要导入的数据` 目录
 
 3. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
+
+4. 打开 `pgadmin` 确认数据都导入无误。
+
+# 第四部分 测试
+
+1. 回到在第一部分打开的 `http://127.0.0.1:8000/` 浏览器
+2. 输入问题：``
+3. 系统回答应该带有答案和链接
