可以读取excel里面的数据

--- a/实战案例3/第19节/如何运行本节课程序.md
+++ b/实战案例3/第19节/如何运行本节课程序.md
@@ -51,9 +51,20 @@ conda activate rag2
 
 2. 切换到根目录下的 `实战案例3\第19节\要导入的数据` 目录
 
-3. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
+3. 安装依赖：
 
-4. 打开 `pgadmin` 确认数据都导入无误。
+```powershell
+pip install pandas
+pip install openpyxl
+```
+
+4. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
+
+```powershell
+python .\import_data_from_excel.py
+```
+
+5. 打开 `pgadmin` 确认数据都导入无误。
 
 # 第四部分 测试
 
