--- a/实战案例3/第19节/如何运行本节课程序.md
+++ b/实战案例3/第19节/如何运行本节课程序.md
@@ -69,5 +69,7 @@ python .\import_data_from_excel.py
 # 第四部分 测试
 
 1. 回到在第一部分打开的 `http://127.0.0.1:8000/` 浏览器
-2. 输入问题：``
+2. 输入问题：`AD林的对象放在哪里？`
 3. 系统回答应该带有答案和链接
+
+![[result.png]]
