--- a/实战案例3/第19节/如何运行本节课程序.md
+++ b/实战案例3/第19节/如何运行本节课程序.md
@@ -72,4 +72,4 @@ python .\import_data_from_excel.py
 2. 输入问题：`AD林的对象放在哪里？`
 3. 系统回答应该带有答案和链接
 
-![[result.png]]
+![最终结果](https://github.com/weiminye/time-geekbang-org-rag/blob/main/%E5%AE%9E%E6%88%98%E6%A1%88%E4%BE%8B3/%E7%AC%AC19%E8%8A%82/result.png "CSDN图标")
