--- a/实战案例3/第20节/如何运行本节课程序.md
+++ b/实战案例3/第20节/如何运行本节课程序.md
@@ -1,75 +1,49 @@
-# 第一部分 - 更新数据库表和启动网站
-1. 打开 `anaconda` 运行以下命令激活虚拟环境 `rag2`
+# 第一部分 - 先完成第19节课
+
+这里假设你已经完成了第19节课，那么所需要的虚拟环境、依赖、测试数据、数据库表结构、独立的向量编码服务都已经搭建和运行好了。
+
+# 第二部分 安装本节课所需依赖
+
+1. 安装用于将好评和差评数据导出excel的 `django-import-export` 包
 
 ```powershell
-conda activate rag2
+pip install django-import-export
 ```
 
-2. 切换到根目录下的 `实战案例3\第19节\程序\main` 目录
-3. 运行以下命令更新数据库
+# 第三部分 建立管理员账户
+
+1. 建立管理员账户，以登录后台导出好评和差评数据
+
+```powershell
+python manage.py createsuperuser
+```
+
+# 第四部分 更新本节课所需数据库结构
+
+1. 切换到根目录下的 `实战案例3\第20节\程序\main` 目录
+2. 运行以下命令更新数据库
 
 ```powershell
 python .\manage.py makemigrations
 python .\manage.py migrate
 ```
 
-4. 打开 `pgadmin` 确认数据库表都创建无误。
+# 第五部分 运行和测试
 
-5. 运行以下命令把website跑起来：
+1. 把网站运行起来
 
 ```powershell
 python .\manage.py runserver
 ```
 
-6. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
+2. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
 
-# 第二部分 启动嵌入模型服务
-
-1. 新开一个 `anaconda` 并激活虚拟环境 `rag2`
-
-```powershell
-conda activate rag2
-```
-
-2. 切换到根目录下的 `实战案例3\嵌入模型服务` 目录
-
-3. 运行以下命令把向量编码服务运行起来
-
-```powershell
-python .\main.py
-```
-
-4. 打开浏览器访问 `http://127.0.0.1:8902/` 确认网站可以正常访问
-
-# 第三部分 导入数据
-
-1. 新开一个 `anaconda` 并激活虚拟环境 `rag2`
-
-```powershell
-conda activate rag2
-```
-
-2. 切换到根目录下的 `实战案例3\第19节\要导入的数据` 目录
-
-3. 安装依赖：
-
-```powershell
-pip install pandas
-pip install openpyxl
-```
-
-4. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
-
-```powershell
-python .\import_data_from_excel.py
-```
-
-5. 打开 `pgadmin` 确认数据都导入无误。
-
-# 第四部分 测试
-
-1. 回到在第一部分打开的 `http://127.0.0.1:8000/` 浏览器
-2. 输入问题：`AD林的对象放在哪里？`
-3. 系统回答应该带有答案和链接
+3. 输入问题：`AD林的对象放在哪里？`
+4. 系统回答应该带有答案和链接
 
 ![[result.png]]
+
+5. 点击好评或差评按钮
+6. 浏览器访问 `http://127.0.0.1:8000/admin` 使用第三部分创建的管理员账户登录后台
+7. 浏览器访问 `http://127.0.0.1:8000/admin` 
+8. 点击按钮导出数据
