--- a/实战案例3/第20节/如何运行本节课程序.md
+++ b/实战案例3/第20节/如何运行本节课程序.md
@@ -40,10 +40,7 @@ python .\manage.py runserver
 
 3. 输入问题：`AD林的对象放在哪里？`
 4. 系统回答应该带有答案和链接
-
-![[result.png]]
-
 5. 点击好评或差评按钮
-6. 浏览器访问 `http://127.0.0.1:8000/admin` 使用第三部分创建的管理员账户登录后台
-7. 浏览器访问 `http://127.0.0.1:8000/admin` 
-8. 点击按钮导出数据
+6. 现在可以在管理员界面点击“导出”按钮导出数据
+
+![最终结果](https://github.com/weiminye/time-geekbang-org-rag/blob/main/%E5%AE%9E%E6%88%98%E6%A1%88%E4%BE%8B3/%E7%AC%AC19%E8%8A%82/result.png "CSDN图标")
