--- a/实战案例3/第21节/如何运行本节课程序.md
+++ b/实战案例3/第21节/如何运行本节课程序.md
@@ -1,26 +1,40 @@
-# 第一部分 - 先完成第19节课
+# 第一部分 - 先完成第20节课
 
-这里假设你已经完成了第19节课，那么所需要的虚拟环境、依赖、测试数据、数据库表结构、独立的向量编码服务都已经搭建和运行好了。
+这里假设你已经完成了第20节课，那么所需要的虚拟环境、依赖、测试数据、数据库表结构、独立的向量编码服务都已经搭建和运行好了。
 
-# 第二部分 安装本节课所需依赖
+# 第二部分 导入本节课所需测试数据
 
-1. 安装用于将好评和差评数据导出excel的 `django-import-export` 包
-
-```powershell
-pip install django-import-export
-```
-
-# 第三部分 建立管理员账户
-
-1. 建立管理员账户，以登录后台导出好评和差评数据
+1. 新开一个 `anaconda` 并激活虚拟环境 `rag2`
 
 ```powershell
-python manage.py createsuperuser
+conda activate rag2
 ```
 
-# 第四部分 更新本节课所需数据库结构
+2. 切换到根目录下的 `实战案例3\第21节\要导入的数据` 目录
 
-1. 切换到根目录下的 `实战案例3\第20节\程序\main` 目录
+3. 运行 `要导入的数据` 目录下的 `import_data_from_excel.py` 文件，把 `data.xlsx` 的数据导入到数据库
+
+```powershell
+python .\import_data_from_excel.py
+```
+
+4. 打开 `pgadmin` 确认数据都导入无误。
+
+# 第三部分 运行用户交互层面提供精确信息部分
+
+1. 切换到根目录下的 `实战案例3\第21节\用户交互层面提供精确信息` 目录, 把网站运行起来
+
+```powershell
+python .\manage.py runserver
+```
+
+2. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
+3. 输入问题：`AD林的对象放在哪里？`
+4. 应能返回正确答案
+
+# 第四部分 运行业务逻辑层面提供精确信息部分
+
+1. 切换到根目录下的 `实战案例3\第21节\业务逻辑层面提供精确信息` 目录, 
 2. 运行以下命令更新数据库
 
 ```powershell
@@ -28,19 +42,12 @@ python .\manage.py makemigrations
 python .\manage.py migrate
 ```
 
-# 第五部分 运行和测试
-
-1. 把网站运行起来
+3. 运行以下命令把网站运行起来
 
 ```powershell
 python .\manage.py runserver
 ```
 
-2. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
-
-3. 输入问题：`AD林的对象放在哪里？`
-4. 系统回答应该带有答案和链接
-5. 点击好评或差评按钮
-6. 现在可以在管理员界面点击“导出”按钮导出数据
-
-![最终结果](https://github.com/weiminye/time-geekbang-org-rag/blob/main/%E5%AE%9E%E6%88%98%E6%A1%88%E4%BE%8B3/%E7%AC%AC20%E8%8A%82/result.png "CSDN图标")
+4. 打开浏览器访问 `http://127.0.0.1:8000/` 确认网站可以正常访问
+5. 输入问题：`AD林的对象放在哪里？`
+6. 应能返回正确答案
